# ming-hsbc

./: pyproject.toml
output/: leaflet.md  terms-and-conditions.md  well_plus_data_privacy_notice_en.md
src/: extractor.py  frontend.py  main.py
