[project]
name = "ming-hsbc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=1.0.12",
    "fastapi>=0.115.9",
    "gradio>=5.33.2",
    "langchain>=0.3.25",
    "openai>=1.86.0",
    "pdf2image>=1.17.0",
    "pdfminer-six>=20250506",
    "python-dotenv>=1.1.0",
    "uvicorn>=0.34.3",
]
